     * [image] has new resize_mode=tile_center
     * Canvas colors can now be expressed as formulas. The formula must return
       the color as a list of its components, eg "([r, g, b, a])"
   * Empty tags are no longer written to the configs of [unit]s and [side]s.
   * New [change_theme] tag to change the theme mid-scenario
   * New [zoom] tag allows changing the zoom level from an event

Version 1.13.7:
 * AI:
   * Fix a performance regression in complex combat situations such as the
     "Oath of Allegiance" UMC campaign.
   * Fix some Micro AIs and AI helper functions not working correctly for AI
     sides under shroud
   * New function ai_helper.find_path_with_shroud()
 * Campaigns:
   * Eastern Invasion:
     * In 'Weldyn Besieged', redesigned the way in which revealing the
       identities of the liches works.
  * Descent Into Darkness:
     * Fixed certain units not having the 'guardian' special in 'Descent into
       Darkness'.
   * Heir to the Throne:
     * Fixed bug allowing the wrong person to receive the Sceptre of Fire.
     * Fixed inconsistencies in Li'sar's sprites and animations when she has the
       scepter.
     * New death animation for Asheviere.
   * Secrets of the Ancients:
     * New campaign added to mainline (Intermediate level, 21 scenarios).
   * The Hammer of Thursagan:
     * New sprites for Dwarvish Witness line.
   * Under the Burning Suns:
     * Fixed difficulty levels with the original units not working.
     * New sprites and animations for Spider Lich.
     * Various balancing changes, bug fixes and improvements to the new units.
       * Major changes:
         * Kaleh and Nym movement points increased from 5 to 6.
         * Moon Singer branch removed.
         * Added winged lvl4 advancement for Quenoth Druid.
         * Support ability now only lowers adjacent upkeep costs by 1.
 * Graphics:
   * New or improved sprites: Royal Warrior, Walking Corpse line wolf variation.