@@ -42,6 +42,7 @@ Version 1.13.7+dev:
    * Empty tags are no longer written to the configs of [unit]s and [side]s.
    * New [change_theme] tag to change the theme mid-scenario
    * New [zoom] tag allows changing the zoom level from an event
+   * [kill]animate=yes now plays victory animations if applicable
 
 Version 1.13.7:
  * AI:
